# theAgency

./: .env.example  .gitignore  .mise.toml  AGENTS.md  README.md  nx.json  package-lock.json  package.json  settings.gradle.kts
.nx/workspace-data/: file-map.json  (+2 more)
backend/: project.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f13e9f2a28d_add_working_dir_to_pipeline.py  4c32b1b01556_add_step_error_message_column.py  8199bcabf466_add_created_at_to_approvals.py  84de6aaf4acd_initial_schema.py  9413e90856df_add_prompt_to_pipeline.py  f9486768fea8_add_model_to_steps.py
backend/app/: database.py  main.py  models.py
backend/app/adapters/: github_client.py  github_models.py  opencode_client.py  opencode_models.py  opencode_process.py
backend/app/config/: config.py
backend/app/routers/: approvals.py  audit.py  events.py  fs.py  health.py  pipelines.py  registry.py
backend/app/schemas/: audit.py  handoff.py  pipeline.py  registry.py
backend/app/services/: agent_registry.py  handoff_extractor.py  pipeline_runner.py  sse_broker.py
backend/app/tests/: conftest.py  test_agent_registry.py  test_approvals_router.py  test_audit_router.py  test_events_router.py  test_fs_router.py  test_handoff_extractor.py  test_health.py  test_opencode_client.py  test_opencode_health_router.py  test_opencode_process.py  test_pipeline_runner.py  test_pipelines_router.py  test_registry_router.py
backend/config/: agents.yaml  pipelines.yaml
docs/: backend.md  frontend.md
frontend/: index.html  package-lock.json  package.json  project.json  vite.config.ts
(+56 files in other folders)
